[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
day-1 = { path = "day-1", alias = "day_1" }
day-2 = { path = "day-2", alias = "day_2" }

[workspace]
members = ["day-1", "day-2"]
